# xentrinobot

./: CMakeLists.txt  README  README.md  ROS-install.sh  Xentrino-ROS.ino  Xentrino.cpp  Xentrino.h  package.xml  xentrino-firmware.ino  xentrino_base_node.cpp
SAMPLE-TEST/: motor_test.ino
firmware/: Xentrino-ROS.ino  platformio.ini  xentrinobot.ino
firmware/examples/: ENCODER.ino
firmware/include/: xentrino.cpp  xentrino.h  xentrino_base_config.h
firmware/include/sec_lib/: xentrino_base_config.h
firmware/include/src_lib/: xentrino.cpp  xentrino.h
firmware/src/: xentrinobot.ino
launch/: base_transform.launch  bringup.launch  configure.launch  imu.launch  laser.launch  navigate.launch  navigate2.launch  odom.launch  odometry.launch  slam.launch
launch/include/: configure.launch  imu.launch  laser_scanner.launch  move_base_2wd.launch  ros_serial.launch  serialcom.launch  xentrino_urdf.launch  ydlidar.launch
launch/include/lidar/: kinect.launch
launch/inlcude/: laser_scanner.launch
param/navigation/: local_planner_params.yaml
src/: base_controller.cpp  base_controller.h  imu.cpp  xentrino_base_controller.cpp  xentrino_base_node.cpp
urdf/: xentrinobot.urdf
